test_suite/test_results_detailed.txt
[1mCURSED Test Suite - Fixed Version[0m
====================================
Compiler: /home/ghuntley/cursed/test_suite/../zig-out/bin/cursed-compiler
Test directory: /home/ghuntley/cursed/test_suite/test_programs
Working from: /home/ghuntley/cursed/test_suite/.. (for stdlib loading)

Scanning for test files...
Found 103 test files

[1m[1/103] Testing: arithmetic/01_mixed_types.csd[0m
  Result: [32mPASS[0m
---
[1m[2/103] Testing: arithmetic/02_edge_cases.csd[0m
  Result: [32mPASS[0m
---
[1m[3/103] Testing: arithmetic/03_operator_precedence.csd[0m
  Result: [32mPASS[0m
---
[1m[4/103] Testing: arithmetic/04_complex_expressions.csd[0m
  Result: [32mPASS[0m
---
[1m[5/103] Testing: arithmetic/arithmetic_basic_operations.csd[0m
  Result: [32mPASS[0m
---
[1m[6/103] Testing: arithmetic/division_semantics_test.csd[0m
  Result: [32mPASS[0m
---
[1m[7/103] Testing: arithmetic/feature_arithmetic_operations.csd[0m
  Result: [32mPASS[0m
---
[1m[8/103] Testing: arithmetic/overflow_edge_cases.csd[0m
  Result: [32mPASS[0m
---
[1m[9/103] Testing: basic/01_hello_world.csd[0m
  Result: [32mPASS[0m
---
[1m[10/103] Testing: basic/02_simple_arithmetic.csd[0m
  Result: [32mPASS[0m
---
[1m[11/103] Testing: basic/03_variable_assignment.csd[0m
  Result: [32mPASS[0m
---
[1m[12/103] Testing: basic/basic_hello_world.csd[0m
  Result: [32mPASS[0m
---
[1m[13/103] Testing: basic/hello_world_simple.csd[0m
  Result: [32mPASS[0m
---
[1m[14/103] Testing: complex/01_nested_operations.csd[0m
  Result: [33mPASS (EXIT_CODE_ISSUE: exit 22, output correct)[0m
---
[1m[15/103] Testing: complex/02_fizzbuzz.csd[0m
  Result: [33mPASS (EXIT_CODE_ISSUE: exit 112, output correct)[0m
---
[1m[16/103] Testing: comprehensive/control_flow_comprehensive.csd[0m
  Result: [32mPASS[0m
---
[1m[17/103] Testing: comprehensive/function_definitions_test.csd[0m
  Result: [32mPASS[0m
---
[1m[18/103] Testing: comprehensive/test_comprehensive_language_features.csd[0m
  Result: [32mPASS[0m
---
[1m[19/103] Testing: control_flow/01_if_statements.csd[0m
  Result: [32mPASS[0m
---
[1m[20/103] Testing: control_flow/02_loops.csd[0m
  Result: [32mPASS[0m
---
[1m[21/103] Testing: control_flow/control_flow_comprehensive.csd[0m
  Result: [32mPASS[0m
---
[1m[22/103] Testing: control_flow/control_flow_if_else.csd[0m
  Result: [32mPASS[0m
---
[1m[23/103] Testing: control_flow/feature_control_flow_comprehensive.csd[0m
  Result: [33mPASS (EXIT_CODE_ISSUE: exit 35, output correct)[0m
---
[1m[24/103] Testing: edge_cases/01_boundary_conditions.csd[0m
  Result: [33mPASS (EXIT_CODE_ISSUE: exit 35, output correct)[0m
---
[1m[25/103] Testing: edge_cases/02_empty_inputs.csd[0m
  Result: [32mPASS[0m
---
[1m[26/103] Testing: edge_cases/edge_case_boundary_values.csd[0m
  Result: [32mPASS[0m
---
[1m[27/103] Testing: edge_cases/edge_case_operator_precedence.csd[0m
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    (no output)

  [36mCompiled (exit: 0):[0m
    (no output)

  [33mHEX COMPARISON (to identify differences):[0m
  [36mInterpreter HEX (exit: 0):[0m
    (no output)

  [36mCompiled HEX (exit: 0):[0m
    (no output)

---
[1m[28/103] Testing: errors/01_division_by_zero.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 1):[0m
    === Division by Zero Test === 
    Normal division: 
    5 
    Attempting division by zero: 
    ❌ Runtime error in /home/ghuntley/cursed/test_suite/test_programs/errors/01_division_by_zero.csd: error.DivisionByZero
    error: DivisionByZero
                            return InterpreterError.DivisionByZero;
                            ^
                .Binary => |bin| return try self.evaluateBinary(bin),
                                        ^
                            const arg_value = try self.evaluateExpression(arg_ptr.*);
                                              ^
                    _ = try self.evaluateExpression(expr);
                        ^
                if (try self.executeStatement(stmt.*)) {
                    ^
                _ = try self.callFunction(main_func, &[_]Value{});
                    ^
            return self.execute(program);
            ^
            return err;
            ^
            try interpretSource(allocator, source, filename.?, verbose);
            ^

  [36mCompiled (exit: 1):[0m
    === Division by Zero Test ===
    Normal division:
    5
    Attempting division by zero:
    Division by zero

---
[1m[29/103] Testing: errors/02_undefined_variable.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 1):[0m
    === Undefined Variable Test === 
    ERROR: No CURSED stdlib implementation found for module 'undefined_var': error.ModuleNotFound
    SELF-HOSTING: Please implement stdlib/undefined_var/mod.csd for true self-hosting
    ❌ Runtime error in /home/ghuntley/cursed/test_suite/test_programs/errors/02_undefined_variable.csd: error.UndefinedVariable
    error: UndefinedVariable
            return InterpreterError.UndefinedVariable;
            ^
                        return InterpreterError.UndefinedVariable;
                        ^
                            const arg_value = try self.evaluateExpression(arg_ptr.*);
                                              ^
                    _ = try self.evaluateExpression(expr);
                        ^
                if (try self.executeStatement(stmt.*)) {
                    ^
                _ = try self.callFunction(main_func, &[_]Value{});
                    ^
            return self.execute(program);
            ^
            return err;
            ^
            try interpretSource(allocator, source, filename.?, verbose);
            ^

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[30/103] Testing: errors/03_error_handling_basic.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 134):[0m
    === Error Handling Test Suite === 
    === Basic Error Handling Tests === 
    Safe division 10/2 = 5 
    Error: Division by zero prevented 
    Safe division 10/0 result: -1 
    Safe division 0/5 = 0 
    Safe division -10/2 = -5 
    === Input Validation Tests === 
    DEBUG: Checking for global builtin function: len
    DEBUG: Found global builtin function: len
    DEBUG: builtinLen called with 1 args
    DEBUG: builtinLen - Value type: Array
    DEBUG: builtinLen - Array length: 6
    Unsupported expression type in interpreter: ArrayAccess
    thread 2393089 panic: integer overflow
                return InterpreterError.TypeMismatch;
                ^
                .Binary => |bin| return try self.evaluateBinary(bin),
                                        ^
            const condition = try self.evaluateExpression(condition_expr.*);
                              ^
                    if (try self.executeIfStatement(if_stmt)) {
                        ^
                if (try self.executeStatement(stmt.*)) {
                    ^
        return @as(cast_target, @ptrCast(slice))[0 .. slice.len * @sizeOf(std.meta.Elem(Slice))];
                                                                ^
        const bytes = mem.sliceAsBytes(memory);
                                      ^
                gpa.free(self.allocatedSlice());
                        ^
                            defer args.deinit(self.allocator);
                                             ^
                .Call => |call| return try self.evaluateCall(call),
                                                            ^
                try self.evaluateExpression(initializer_expr.*)
                                           ^
                    try self.executeLetStatement(let);
                                                ^
                    if (try self.executeStatement(stmt.*)) {
                                                 ^
                    if (try self.executeForStatement(for_stmt)) {
                                                    ^
                if (try self.executeStatement(stmt.*)) {
                                             ^
                            return try self.callFunction(func, args.items);
                                                        ^
                .Call => |call| return try self.evaluateCall(call),
                                                            ^
                    _ = try self.evaluateExpression(expr);
                                                   ^
                if (try self.executeStatement(stmt.*)) {
                                             ^
                _ = try self.callFunction(main_func, &[_]Value{});
                                         ^
            return self.execute(program);
                               ^
        cursed_interpreter.interpret(program) catch |err| {
                                    ^
            try interpretSource(allocator, source, filename.?, verbose);
                               ^
                const result = root.main() catch |err| {
                                        ^
    ../sysdeps/nptl/libc_start_call_main.h:58:16: 0x7dcb4ac2a1c9 in __libc_start_call_main (../sysdeps/x86/libc-start.c)
    ../csu/libc-start.c:360:3: 0x7dcb4ac2a28a in __libc_start_main_impl (../sysdeps/x86/libc-start.c)
    ???:?:?: 0x1474c64 in ??? (???)
    ???:?:?: 0x0 in ??? (???)

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[31/103] Testing: errors/03_error_handling_simple.csd[0m
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    (no output)

  [36mCompiled (exit: 0):[0m
    (no output)

  [33mHEX COMPARISON (to identify differences):[0m
  [36mInterpreter HEX (exit: 0):[0m
    (no output)

  [36mCompiled HEX (exit: 0):[0m
    (no output)

---
[1m[32/103] Testing: errors/03_error_handling_yikes_fam_shook.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 1):[0m
    DEBUG: Checking for global builtin function: divide_with_error
    DEBUG: Global builtin function divide_with_error not found
    ❌ Runtime error in /home/ghuntley/cursed/test_suite/test_programs/errors/03_error_handling_yikes_fam_shook.csd: error.UndefinedFunction
    error: UndefinedFunction
                        return InterpreterError.UndefinedFunction;
                        ^
                .Call => |call| return try self.evaluateCall(call),
                                       ^
                try self.evaluateExpression(initializer_expr.*)
                ^
                    try self.executeLetStatement(let);
                    ^
                    _ = try self.executeStatement(stmt.*);
                        ^
            return self.execute(program);
            ^
            return err;
            ^
            try interpretSource(allocator, source, filename.?, verbose);
            ^

  [36mCompiled (exit: 134):[0m
    Compilation failed

---
[1m[33/103] Testing: errors/04_boundary_error_conditions.csd[0m
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    All boundary error condition tests completed 

  [36mCompiled (exit: 134):[0m
    Compilation failed

---
[1m[34/103] Testing: errors/04_panic_recovery.csd[0m
  Result: [31mFAIL (OUTPUT_MISMATCH)[0m
  [36mInterpreter (exit: 0):[0m
    Outer panic handled: cap 
    Panic recovery tests completed successfully 

  [36mCompiled (exit: 0):[0m
    Panic recovery tests completed successfully

  [33mHEX COMPARISON (to identify differences):[0m
  [36mInterpreter HEX (exit: 0):[0m
    00000000: 4f75 7465 7220 7061 6e69 6320 6861 6e64  Outer panic hand
    00000010: 6c65 643a 2063 6170 200a 5061 6e69 6320  led: cap .Panic 
    00000020: 7265 636f 7665 7279 2074 6573 7473 2063  recovery tests c
    00000030: 6f6d 706c 6574 6564 2073 7563 6365 7373  ompleted success
    00000040: 6675 6c6c 7920                           fully 

  [36mCompiled HEX (exit: 0):[0m
    00000000: 5061 6e69 6320 7265 636f 7665 7279 2074  Panic recovery t
    00000010: 6573 7473 2063 6f6d 706c 6574 6564 2073  ests completed s
    00000020: 7563 6365 7373 6675 6c6c 79              uccessfully

---
[1m[35/103] Testing: errors/05_error_handling_fixed.csd[0m
  Result: [33mPASS (EXIT_CODE_ISSUE: exit 30, output correct)[0m
---
[1m[36/103] Testing: feature/feature_comprehensive_syntax.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 1):[0m
    Initial values: 
    Testing comprehensive syntax 
    ERROR: No CURSED stdlib implementation found for module 'number': error.ModuleNotFound
    SELF-HOSTING: Please implement stdlib/number/mod.csd for true self-hosting
    ❌ Runtime error in /home/ghuntley/cursed/test_suite/test_programs/feature/feature_comprehensive_syntax.csd: error.UndefinedVariable
    error: UndefinedVariable
            return InterpreterError.UndefinedVariable;
            ^
                        return InterpreterError.UndefinedVariable;
                        ^
                            const arg_value = try self.evaluateExpression(arg_ptr.*);
                                              ^
                    _ = try self.evaluateExpression(expr);
                        ^
                    _ = try self.executeStatement(stmt.*);
                        ^
            return self.execute(program);
            ^
            return err;
            ^
            try interpretSource(allocator, source, filename.?, verbose);
            ^

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[37/103] Testing: features/feature_complete_stdlib_demo.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 1):[0m
    ❌ Runtime error in /home/ghuntley/cursed/test_suite/test_programs/features/feature_complete_stdlib_demo.csd: error.UndefinedFunction
    error: UndefinedFunction
                        return InterpreterError.UndefinedFunction;
                        ^
                    return try self.evaluateMethodCall(object_as_member, method_call.arguments.items);
                           ^
                    _ = try self.evaluateExpression(expr);
                        ^
                if (try self.executeStatement(stmt.*)) {
                    ^
                _ = try self.callFunction(main_func, &[_]Value{});
                    ^
            return self.execute(program);
            ^
            return err;
            ^
            try interpretSource(allocator, source, filename.?, verbose);
            ^

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[38/103] Testing: features/feature_control_flow_simple.csd[0m
  Result: [32mPASS[0m
---
[1m[39/103] Testing: features/feature_function_definitions.csd[0m
grep: (standard input): binary file matches
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    Hello from CURSED! 
    Addition result: {} 8 
    Is valid: {} based 

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[40/103] Testing: features/feature_stdlib_imports.csd[0m
  Result: [33mFAIL (different error messages)[0m
  [36mInterpreter (exit: 1):[0m
    === Testing Multiple Stdlib Imports === 
    Testing vibez output 
    mathz.abs_normie({}) = {} -15 15 
    mathz.max({}, {}) = {} -15 25 25 
    ❌ Runtime error in /home/ghuntley/cursed/test_suite/test_programs/features/feature_stdlib_imports.csd: error.UndefinedFunction
    error: UndefinedFunction
                        return InterpreterError.UndefinedFunction;
                        ^
                    return try self.evaluateMethodCall(object_as_member, method_call.arguments.items);
                           ^
                try self.evaluateExpression(initializer_expr.*)
                ^
                    try self.executeLetStatement(let);
                    ^
                if (try self.executeStatement(stmt.*)) {
                    ^
                _ = try self.callFunction(main_func, &[_]Value{});
                    ^
            return self.execute(program);
            ^
            return err;
            ^
            try interpretSource(allocator, source, filename.?, verbose);
            ^

  [36mCompiled (exit: 134):[0m
    Compilation failed

---
[1m[41/103] Testing: features/feature_stdlib_integration.csd[0m
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    === Stdlib Test === 
    abs(-42): 
    42 
    add(3, 4): 
    7 
    === Test Complete === 

  [36mCompiled (exit: 134):[0m
    Compilation failed

---
[1m[42/103] Testing: functions/01_simple_function.csd[0m
  Result: [32mPASS[0m
---
[1m[43/103] Testing: functions/02_recursive_function.csd[0m
  Result: [32mPASS[0m
---
[1m[44/103] Testing: functions/03_nested_function_calls.csd[0m
  Result: [32mPASS[0m
---
[1m[45/103] Testing: functions/04_function_parameters.csd[0m
  Result: [32mPASS[0m
---
[1m[46/103] Testing: functions/feature_function_calls.csd[0m
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    === Function Call Test === 
    Sum of 7 and 13: 
    20 
    Function call successful 
    Is 25 positive? 
    based 
    Is -5 positive? 
    cap 
    Function result in expression: 
    14 
    Mixed function calls result: 
    5 
    === Function Test Complete === 

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[47/103] Testing: functions/functions_parameter_return.csd[0m
  Result: [31mCOMPILE ERROR (interpreted worked)[0m
  [36mInterpreter (exit: 0):[0m
    42 
    42 
    30 
    based 
    12 

  [36mCompiled (exit: 1):[0m
    Compilation failed

---
[1m[48/103] Testing: memory/01_allocation_patterns.csd[0m
